logs/archive/rf9-p3_13094361.err
cpu-bind=MASK - bp1-compute019, task  0  0 [2937941]: mask 0x6000000600 set
Traceback (most recent call last):
  File "/user/home/zj22662/photon-net/calc_test_loss.py", line 3, in <module>
    from p_pack import utils
  File "/user/home/zj22662/photon-net/p_pack/utils.py", line 202
    if len(g.reupload_freq) = 1: reup_freq = int(g.reupload_freq)
       ^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to function call here. Maybe you meant '==' instead of '='?
